Fixes to syntax, readability, UI/UX, stylesheets, views htmls

--- a/app/assets/stylesheets/views/header.scss
+++ b/app/assets/stylesheets/views/header.scss
@@ -5,3 +5,10 @@
 .navbar {
   margin-bottom: 0;
 }
+
+.btn {
+  margin-top: 8px;
+  margin-bottom: 8px;
+  margin-left: 2.5px;
+  margin-right: 2.5px;
+}
